--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 RMI
-ICalculator.java
+
+(ICalculator.java)
 import java.rmi.Remote;
 import java.rmi.RemoteException;
 
@@ -11,7 +12,7 @@ public interface ICalculator extends Remote {
 }
 
 
-Calculator.java
+(Calculator.java)
 import java.rmi.RemoteException;
 import java.rmi.server.UnicastRemoteObject;
 
@@ -44,7 +45,7 @@ public class Calculator extends UnicastRemoteObject implements ICalculator {
 
 
 
-CalculatorServer.java
+(CalculatorServer.java)
 import java.rmi.registry.LocateRegistry;
 import java.rmi.registry.Registry;
 import java.rmi.Naming;
@@ -93,7 +94,7 @@ public class CalculatorClient {
 
 RPC
 
-CalculatorRequest.java
+(CalculatorRequest.java)
 import java.io.Serializable;
 
 public class CalculatorRequest implements Serializable {
@@ -133,7 +134,7 @@ public class CalculatorRequest implements Serializable {
     }
 }
 
-CalculatorServer.java
+(CalculatorServer.java)
 import java.io.*;
 import java.net.*;
 
@@ -191,7 +192,8 @@ public class CalculatorServer {
         }
     }
 }
-CalculatorClient.java
+
+(CalculatorClient.java)
 import java.io.*;
 import java.net.*;
 
