--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ public class CalculatorServer {
 
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-CalculatorClient.java
+(CalculatorClient.java)
 import java.rmi.Naming;
 
 public class CalculatorClient {
